go-cep/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-cep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-cep
  template:
    metadata:
      labels:
        app: go-cep
    spec:
      containers:
        - name: go-cep
          image: ismael3s/go-cep:01d8598
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
