go-cep/service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-cep
spec:
  selector:
    app: go-cep
  ports:
  - port: 8080
    targetPort: 8080
