go-cep/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-cep
  labels:
    name: go-cep
spec:
  rules:
  - host: go-cep.frontend
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: go-cep
            port: 
              number: 8080
